refactoring: cors